--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -16,7 +16,7 @@
               "authenticationType": "API_KEY",
               "apiKeyConfig": {
                 "apiKeyExpirationDays": 7,
-                "description": ""
+                "description": "emojeek"
               }
             }
           ]
