--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@types/react-dom": "^17.0.3",
     "@types/react-router-dom": "^5.1.7",
     "aws-amplify": "^3.3.26",
+    "aws-appsync": "^4.0.3",
     "emoji-mart": "^3.0.1",
+    "graphql-tag": "^2.11.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
