--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -15,8 +15,8 @@
             {
               "authenticationType": "API_KEY",
               "apiKeyConfig": {
-                "apiKeyExpirationDays": 7,
-                "description": "emojeek"
+                "apiKeyExpirationDays": 365,
+                "description": ""
               }
             }
           ]
